<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:text="@string/subtotal"
                android:textAlignment="viewEnd"
                android:textSize="36sp" />

            <EditText
                android:id="@+id/edit_text_amount"
                style="@style/EditTextStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:text="@string/tax"
                android:textAlignment="viewEnd"
                android:textSize="36sp" />

            <EditText
                android:id="@+id/edit_text_tax"
                style="@style/EditTextStyle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/percent_sign"
                android:textSize="36sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:text="@string/tip"
                android:textAlignment="viewEnd"
                android:textSize="36sp" />

            <EditText
                android:id="@+id/edit_text_tip"
                style="@style/EditTextStyle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/percent_sign"
                android:textSize="36sp" />
        </LinearLayout>

        <Button
            android:id="@+id/total_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="32dp"
            android:paddingTop="16dp"
            android:paddingRight="32dp"
            android:paddingBottom="16dp"
            android:text="@string/enter"
            android:textSize="24sp" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>